GH-238 fix immutable list bug.